--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
-<script>
-    var number = prompt("введите число от 0 до 999")
-    var object = {}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Шахматы</title>
+</head>
+<link rel="stylesheet" href="style.css">
 
-    function addNumber(number) {
-        var num = number.split('')
-        if (num.length > 3) {
-            console.log("Слишком большое число");
-            return 0;
-        }
-        if (num[0]) {
-            object.единиц = num[0]
-        }
-        if (num[0] && num[1]) {
-            object.единиц = num[1]
-            object.десяток = num[0]
-        }
-        if (num[0] && num[1] && num[2]) {
-            object.единиц = num[2]
-            object.десяток = num[1]
-            object.соток = num[0]
-        }
-    }
-    addNumber(number)
-    console.log(object)
-</script>
+<body>
+    <div class="mainblok"></div>
+    <script src="chess.js"></script>
+</body>
+</html>
